<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/margin_bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/default_car_image"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_compare_new"
            android:layout_marginTop="@dimen/margin_top"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compare"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_medium" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compare_4cars"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_medium"
            android:layout_marginTop="@dimen/margin_top"/>

    </LinearLayout>
<Button
    android:id="@+id/btn_add_car_compare"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_style"
    android:text="@string/add_compare"
    android:textSize="@dimen/textsize_medium"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:layout_marginTop="@dimen/margin_top"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trend_comparison"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_large"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_more"
            android:layout_marginTop="@dimen/margin_small"/>


    </LinearLayout>


        <in.arjsna.swipecardlib.SwipeCardView
            android:id="@+id/swipe_card_view_comparison"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:rotation_degrees="15.5"
            app:bottom_swipe_detect="false"
            android:background="@color/white"
            app:max_visible="100"
            android:layout_margin="@dimen/margin_top" />


</LinearLayout>
    </ScrollView>